--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>8.0.15</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.1.5.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
